--- a/client/src/assets/data/app.layout.json
+++ b/client/src/assets/data/app.layout.json
@@ -1,17 +1,17 @@
 {
     "layout":[
         {
-          "header":"导航",
+          "header":"Navigator",
           "items":[
-            {"title":"基金公司", "path":"companies", "description":"基金公司", "icon":"fa fa-building"}, 
-            {"title":"基金", "path":"funds", "description":"基金", "icon":"fa fa-list"},
-            {"title":"股票查询", "path":"stock", "description":"股票查询", "icon":"fa fa-line-chart"}
+            {"title":"My To Do List", "path":"dashboard/companies", "description":"基金公司", "icon":"fa fa-building"}, 
+            {"title":"My Application", "path":"dashboard/funds", "description":"基金", "icon":"fa fa-list"}
           ]
         },
         {
-          "header":"设置",
+          "header":"Settings",
           "items":[
-            {"title":"爬虫设置", "path":"spider", "description":"爬虫设置", "icon":"fa fa-wrench"}
+            {"title":"Keyword", "path":"spider", "description":"爬虫设置", "icon":"fa fa-wrench"},
+            {"title":"User Profile", "path":"spider", "description":"爬虫设置", "icon":"fa fa-address-book"}
           ]
         }
     ]
