--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@types/jquery": "^3.3.1",
     "admin-lte": "2.3.11",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
